# e-commerce

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/application/: chat_service.py  dtos.py  product_service.py
src/domain/: entities.py  exceptions.py  repositories.py
src/infrastructure/api/: main.py
src/infrastructure/db/: database.py  init_data.py  models.py
src/infrastructure/llm_providers/: gemini_service.py
src/infrastructure/repositories/: chat_repository.py  product_repository.py
test/: conftest.py  test_entities.py  test_services.py
tests/: test_entities.py  test_services.py
